<resources>
    <string name="app_name">১৯৭১ বাংলাদেশী বুদ্ধিজীবী হত্যাকাণ্ড </string>
    <string name="Intellectual_killing">বুদ্ধিজীবী হত্যাকাণ্ড</string>
    <string name="The_reason">কারণ</string>
    <string name="Killing_plan">হত্যাকাণ্ডের পরিকল্পনা</string>
    <string name="Murder_details">হত্যাকাণ্ডের বিবরণ</string>
    <string name="Individuals_involved">জড়িত ব্যক্তিবর্গ</string>
    <string name="Murder_statistics">হত্যার পরিসংখ্যান</string>
    <string name="The_list_of_killed_intellectuals">নিহত বুদ্ধিজীবীদের তালিকা</string>

    <string name="details_Intellectual_killing">

        ১৯৭১ বাংলাদেশী বুদ্ধিজীবী হত্যাকাণ্ডের উপর মেহেপুরে নির্মিত একটি ভাস্কর্য \n\n

        বুদ্ধিজীবী হত্যাকাণ্ড বলতে ১৯৭১ সালে বাংলাদেশের মহান মুক্তিযুদ্ধের
        পুরো সময়টুকুতেই পাকিস্তানী হানাদারবাহিনী কর্তৃক পরিকল্পিতভাবে
        বাংলাদেশের জ্ঞানী-গুণী ও মুক্তবুদ্ধিসম্পন্ন মানুষদের হত্যা করাকে
        বুঝায়। ১৯৭১ এর ডিসেম্বর মাসে স্বাধীনতা যুদ্ধের শেষ পর্যায়ে এসে
        পাকিস্তান বাহিনী যখন বুঝতে শুরু করে যে তাদের পক্ষে যুদ্ধে জেতা
        সম্ভব না, তখন তারা নবগঠিত দেশকে সাংস্কৃতিক, সামাজিক ও
        শিক্ষাগত দিক থেকে দূর্বল এবং পঙ্গু করে দেয়ার জন্য পরিকল্পনা
        করতে থাকে। সেই পরিকল্পনা  অনুযায়ী ১৪ ডিসেম্বর রাতে পাকিস্তানী
        বাহিনী তাদের দেশীয় দোসর রাজাকার, আলবদর ও আল শামস বাহিনীর
        সহায়তায় দেশের শ্রেষ্ঠ সন্তানদের নিজ নিজ গৃহ হতে তুলে এনে
        ির্মম নির্যাতনের পর হত্যা করে। এই পরিকল্পিত গণহত্যাটি
        বাংলাদেশের ইতিহাসে বুদ্ধিজীবী হত্যাকাণ্ড নামে পরিচিত। বন্দী
        অবস্থায় বুদ্ধিজীবীদের বিভিন্ন বধ্যভূমিতে হত্যা করা হয়। দেশ
        স্বাধীন হওয়ার পর তাঁদের ক্ষত-বিক্ষত ও বিকৃত লাশ রায়েরবাজার
        এবং মিরপুর বধ্যভূমিতে পাওয়া যায়। অনেকের লাশ শনাক্তও করা
        যায়নি, পাওয়াও যায়নি বহু লাশ। ১৯৭১ এর ১৪ ডিসেম্বরের নির্মম
        হত্যাকাণ্ডের কথা স্মরণ করে প্রতিবছর ১৪ ডিসেম্বর বাংলাদেশে
        পালিত হয় শহীদ বুদ্ধিজীবী দিবস। বুদ্ধিজীবী হত্যার স্মরণে
        বাংলাদেশের ঢাকায় বুদ্ধিজীবী স্মৃতিসৌধ স্থাপন করা হয়েছে। এছাড়া
        বাংলাদেশ ডাকবিভাগ বুদ্ধিজীবীদের স্মরণে একটি স্মারক ডাকটিকিটের
        সিরিজ বের করেছে।
    </string>

    <string name="details_The_reason">

        যুদ্ধের পরপরই রায়েরবাজার বধ্যভূমি থেকে তোলা ছবিতে বুদ্ধিজীবীদের লাশ দেখা যাচ্ছে\n\n

        পাকিস্তান নামক অগণতান্ত্রিক এবং অবৈজ্ঞানিক রাষ্ট্র গঠনের পর থেকেই বাঙালিদের
        বা পূর্ব-পাকিস্তানীদের সাথে পশ্চিম-পাকিস্তানের রাষ্ট্র-যন্ত্র বৈষম্যমূলক আচরণ
        করতে থাকে। তারা বাঙালিদের ভাষা ও সংস্কৃতির উপর আঘাত হানে। এরই ফলশ্রুতিতে
        বাঙালির মনে ক্ষোভ পুঞ্জিভূত হতে থাকে এবং বাঙালিরা এই অবিচারের বিরুদ্ধে রাজনৈতিক
        ও সাংস্কৃতিক আন্দোলন শুরু করে। এ সকল আন্দোলনের নেতৃত্বে থাকতেন সমাজের সর্বস্তরের
        বুদ্ধিজীবীরা। তারা সামাজিক ও সাংস্কৃতিক-ভাবে বাঙালিদের বাঙালি জাতীয়তা-বোধে উদ্বুদ্ধ
        করতেন। তাদের সাংস্কৃতিক আন্দোলনের ফলেই জনগণ ধীরে ধীরে নিজেদের দাবি ও অধিকার
        সম্পর্কে সচেতন হয়ে উঠতে থাকে যা পরবর্তীতে তাদের রাজনৈতিক আন্দোলনের দিকে ধাবিত
        করে। এজন্য শুরু থেকেই বুদ্ধিজীবীরা পাকিস্তানের সামরিক শাসকদের লক্ষ্যবস্তুতে পরিণত
        হয়েছিলেন। তাই যুদ্ধের শুরু থেকেই পাকিস্তানী বাহিনী বাছাই করে করে বুদ্ধিজীবীদের হত্যা করতে
        থাকে। এছাড়া যুদ্ধের শেষ পর্যায়ে যখন পাকিস্তানের পরাজয় যখন শুধু সময়ের ব্যাপার তখন বাঙালি
        জাতি যেন শিক্ষা, সাংস্কৃতিক ও সামাজিকভাবে দূর্বল হয়ে পড়ে তাই তারা বাঙালি জাতিকে মেধা-শূন্য
        করে দেবার লক্ষ্যে তালিকা তৈরি করে বুদ্ধিজীবীদের হত্যা করে। এ প্রসঙ্গে শহীদ বুদ্ধিজীবী কোষ
        গ্রন্থে যে যুক্তিটি দেয়া হয়েছে তা প্রাসঙ্গিক ও যুক্তিযুক্ত এটা অবধারিত হয়, বুদ্ধিজীবীরাই জাগিয়ে
        রাখেন জাতির বিবেক, জাগিয়ে রাখেন তাদের রচনাবলীর মাধ্যমে,
        সাংবাদিকদের কলমের মাধ্যমে, গানের সুরে, শিক্ষালয়ে পাঠদানে, চিকিৎসা, প্রকৌশল, রাজনীতি
        ইত্যাদির মাধ্যমে জনগণের সান্নিধ্যে এসে। একটি জাতিকে নির্বীজ করে দেবার প্রথম উপায়
        বুদ্ধিজীবী শূন্য করে দেয়া। ২৫ মার্চ রাতে এই প্রক্রিয়া শুরু হয়েছিল অতর্কিতে, তারপর ধীরে ধীরে,
        শেষে পরাজয় অনিবার্য জেনে ডিসেম্বর ১০ তারিখ হতে ১৫ ডিসেম্বরের মধ্যে দ্রুতগতিতে।

    </string>

    <string name="details_Killing_plan">
        মেজর জেনারেল রাও ফরমান আলি, পাকিস্তানী বাহিনীর পক্ষে বুদ্ধিজীবী হত্যাকান্ডের মূল পরিকল্পনাকারী \n\n

        ২৫ মার্চ রাতে অপারেশন সার্চলাইটের পরিকল্পনার সাথে একসাথেই বুদ্ধিজীবীদের হত্যার পরিকল্পনা করা
        হয়। পাকিস্তানী সেনারা অপারেশন চলাকালীন সময়ে খুঁজে-খুঁজে বুদ্ধিজীবীদের হত্যা করতে থাকে।
        ঢাকা বিশ্ববিদ্যালয়ের অনেক শিক্ষককে ২৫শে মার্চের রাতেই হত্যা করা হয়। তবে, পরিকল্পিত
        হত্যার ব্যাপক অংশটি ঘটে যুদ্ধ শেষ হবার মাত্র কয়েকদিন আগে। যুদ্ধ চলাকালীন সময়ে পাকিস্তানী
        সেনাবাহিনী এবং তাদের প্রশিক্ষিত আধা-সামরিক বাহিনী আল-বদর এবং আল-শামস বাহিনী একটি
        তালিকা তৈরি করে, যেখানে এই সব স্বাধীনতাকামী বুদ্ধিজীবীদের নাম অন্তর্ভুক্ত করা হয়।
        ধারণা করা হয় পাকিস্তানী বাহিনীর পক্ষে এ কাজের মূল পরিকল্পনাকারী ছিল মেজর জেনারেল রাও
        ফরমান আলি। কারণ স্বাধীনতার পর ধ্বংসপ্রাপ্ত বঙ্গভবন থেকে তার স্বহস্তে লিখিত ডায়েরী
        পাওয়া যায় যাতে অনেক নিহত ও জীবিত বুদ্ধিজীবীর নাম পাওয়া যায়। এছাড়া আইয়ুব শাসন
        আমলের তথ্য সচিব আলতাফ গওহরের এক সাক্ষাৎকার হতে জানা যায় যে, ফরমান আলীর তালিকায়
        তার বন্ধু কবি সানাউল হকের নাম ছিল। আলতাফ গওহরের অনুরোধক্রমে রাও ফরমান আলি তার
        ডায়েরীর লিস্ট থেকে সানাউল হকের নাম কেটে দেন। এছাড়া আলবদরদের জন্য গাড়ির ব্যবস্থা তিনিই
        করেছিলেন বলে তার ডায়েরীতে একটি নোট পাওয়া যায়।\n

        এছাড়া তার ডায়েরীতে হেইট ও ডুসপিক নামে দুজন মার্কিন নাগরিকের কথা পাওয়া যায়। এদের নামের পাশে
        ইউএসএ এবং ডিজিআইএস লেখা ছিল। এর মধ্যে হেইট ১৯৫৩ সাল থেকে সামরিক গোয়েন্দা-বাহিনীতে
        যুক্ত ছিল এবং ডুসপিক ছিল সিআইএ এজেন্ট। এ কারণে সন্দেহ করা হয়ে থাকে, পুরো ঘটনার
        পরিকল্পনায় সিআইএ'র ভূমিকা ছিল।

    </string>
    <string name="details_Murder_details">
        ঢাকার রায়ের বাজার বধ্যভূমিতে নির্মিত স্মৃতিসৌধ ২০০৯ \n\n
        ডিসেম্বরের ৪ তারিখ হতে ঢাকায় নতুন করে কারফিউ জারি করা হয়। ডিসেম্বরের ১০ তারিখ হতে বুদ্ধিজীবী
        হত্যাকাণ্ডের প্রস্তুতি নেয়া হতে থাকে। মূলত ১৪ ডিসেম্বর পরিকল্পনার মূল অংশ বাস্তবায়ন হয়।
        অধ্যাপক, সাংবাদিক, শিল্পী, প্রকৌশলী, লেখক-সহ চিহ্নিত বুদ্ধিজীবীদের পাকিস্তান সেনাবাহিনী
        এবং তাদের দোসরেরা জোরপূর্বক অপহরণ করে নিয়ে যায়। সেদিন প্রায় ২০০ জনের মত বুদ্ধিজীবীদের
        তাদের বাসা হতে ধরে নিয়ে যাওয়া হয়। তাদের চোখে কাপড় বেঁধে মিরপুর, মোহাম্মদপুর, নাখালপাড়া,
        রাজারবাগসহ অন্যান্য আরো অনেক স্থানে অবস্থিত নির্যাতন কেন্দ্রে নিয়ে যাওয়া হয়। সেখানে তাদের
        উপর বীভৎস নির্যাতন চালানো হয়। পরে তাদের নৃশংসভাবে রায়েরবাজার এবং মিরপুর বধ্যভূমিতে হত্যা
        করে ফেলে রাখা হয়।\n

        এমনকি, আত্মসমর্পণ ও যুদ্ধের আনুষ্ঠানিক সমাপ্তির পরেও পাকিস্তানী সেনাবাহিনী এবং তার সহযোগীদের
        গোলাগুলির অভিযোগ পাওয়া যায়। এমনই একটি ঘটনায়, ১৯৭২ সালের জানুয়ারি মাসের ৩০ তারিখ
        স্বনামধন্য চলচ্চিত্র-নির্মাতা জহির রায়হান প্রাণ হারান। এর পেছনে সশস্ত্র বিহারীদের হাত রয়েছে
        বলে সন্দেহ করা হয়। নিহত বুদ্ধিজীবীদের স্মরণে প্রতি বছর ডিসেম্বরের ১৪ তারিখ "শহীদ বুদ্ধিজীবী
        দিবস" হিসেবে পালন করা হয়।


     </string>
    <string name="details_Individuals_involved">

        শহীদ বুদ্ধিজীবী কবরস্থান হলো বাংলাদেশের রাজধানী ঢাকা শহরের একটি সমাধীস্থল, যেখানে দেশের বুদ্ধিজীবী এবং
        কৃতি ব্যক্তিত্বদেরকে সমাহিত করা হয় এবং কবরগুলো সংরক্ষণ করা হয় রাষ্ট্রীয় ব্যবস্থাপনায়।
        এটি ৬৫ একর জায়গা জুড়ে এবং ঢাকা শহরের সবচেয়ে বড় সমাধিস্থল যেখানে প্রায় ৩,০০০টি কবর
        স্থায়ী হিসাবে সংরক্ষিত রয়েছে। \n\n
        পাকিস্তানী সামরিক জান্তার পক্ষে এ হত্যাকাণ্ডের মূল পরিকল্পনাকারী ছিল মেজর জেনারেল রাও
        ফরমান আলী। আর তাকে তালিকা প্রস্তুতিতে সহযোগীতা ও হত্যাকাণ্ড বাস্তবায়নের পেছনে ছিল মূলত
        জামায়াতে ইসলামী কর্তৃক গঠিত কুখ্যাত আল বদর বাহিনী। বুদ্ধিজীবী হত্যার প্রধান ঘাতক ছিল
        বদর বাহিনীর চৌধুরী মঈনুদ্দীন (অপারেশন ইন-চার্জ) ও আশরাফুজ্জামান খান (প্রধান জল্লাদ)। ১৬
        ডিসেম্বরের পর আশরাফুজ্জামান খানের নাখালপাড়ার বাড়ি থেকে তার একটি ব্যক্তিগত ডায়েরী উদ্ধার
        করা হয়, যার দুটি পৃষ্ঠায় প্রায় ২০ জন বুদ্ধিজীবীর নাম ও বিশ্ববিদ্যালয়ে তাদের কোয়ার্টার নম্বরসহ
        লেখা ছিল। তার গাড়ির ড্রাইভার মফিজুদ্দিনের দেয়া সাক্ষ্য অনুযায়ী রায়ের বাজারের বিল ও মিরপুরের
        শিয়ালবাড়ি বদ্ধভূমি হতে বেশ কয়েকজন বুদ্ধিজীবীর গলিত লাশ পাওয়া যায় যাদের সে নিজ হাতে গুলি
        করে মেরেছিল। আর চৌধুরী মঈনুদ্দীন ৭১ সালে জামায়াতে ইসলামীর কেন্দ্রীয় কমিটির সদস্য ছিল।
        সে অবজারভার ভবন হতে বুদ্ধিজীবীদের নাম ঠিকানা রাও ফরমান আলী ও ব্রিগেডিয়ার বশীর আহমেদকে
        পৌঁছে দিত। এছাড়া আরো ছিলেন এ বি এম খালেক মজুমদার (শহীদুল্লাহ কায়সারের হত্যাকারী),
        মাওলানা আবদুল মান্নান (ডাঃ আলীম চৌধুরীর হত্যাকারী), আবদুল কাদের মোল্লা
        (কবি মেহেরুন্নেসার হত্যাকারী) প্রমুখ। চট্টগ্রামে প্রধান হত্যাকারী ছিলেন ফজলুল কাদের চৌধুরী ও
        তার দুই ছেলে সালাউদ্দিন কাদের চৌধুরী এবং গিয়াস কাদের চৌধুরী।
      </string>
    <string name="details_Murder_statistics">
        বাংলাপিডিয়া হতে প্রাপ্ত তথ্য অনুযায়ী শহীদ বুদ্ধিজীবীদের সংখ্যা নিম্নরূপঃ-\n\n

        শিক্ষাবিদ - ৯৯১ জন\n
        সাংবাদিক - ১৩\n
        চিকিৎসক - ৪৯\n
        আইনজীবী - ৪২\n
        অন্যান্য (সাংস্কৃতিক ব্যক্তিত্ব, শিল্পী এবং প্রকৌশলী) - ১৬\n
        শহীদ শিক্ষাবিদ (বিশ্ববিদ্যালয়ের সাথে সম্পৃক্ত নয় এমন) = ৯৬৮\n
        শহীদ বিশ্ববিদ্যালয় শিক্ষক = ২১\n
        মোট শহীদ শিক্ষাবিদ = ৯৮৯\n

        প্রতিবছর বাংলাদেশে ১৪ ডিসেম্বর দিনটিকে শহীদ বুদ্ধিজীবী দিবসহিসেবে পালন করা হয়।



    </string>
    <string name="details_The_list_of_killed_intellectuals">
        ২৫শে মার্চ থেকে ১৬ই ডিসেম্বর পর্যন্ত বেশ কয়েকজন স্বনামধন্য বুদ্ধিজীবী পাকবাহিনীর হাতে
        প্রাণ হারান। \n তাদের মধ্যে উল্লেখযোগ্য
        ঢাকা বিশ্ববিদ্যালয়ের শিক্ষকঃ
        ডঃ গোবিন্দ চন্দ্র দেব (দর্শনশাস্ত্র)।\n
        ডঃ মুনির চৌধুরী (বাংলা সাহিত্য)।\n
        ডঃ মোফাজ্জল হায়দার চৌধুরী (বাংলা সাহিত্য)।\n
        ডঃ আনোয়ার পাশা (বাংলা সাহিত্য)।\n
        ডঃ আবুল খায়ের (ইতিহাস)।\n
        ডঃ জ্যোতির্ময় গুহঠাকুরতা (ইংরেজি সাহিত্য)।\n
        ডঃ সিরাজুল হক খান (শিক্ষা)।\n
        ডঃ এ এন এম ফাইজুল মাহী (শিক্ষা)।\n
        হুমায়ূন কবীর (ইংরেজি সাহিত্য)।\n
        রাশিদুল হাসান (ইংরেজি সাহিত্য)।\n
        সাজিদুল হাসান (পদার্থবিদ্যা)।\n
        ফজলুর রহমান খান (মৃত্তিকা বিজ্ঞান)।\n
        এন এম মনিরুজ্জামান (পরিসংখ্যান)।\n
        এ মুকতাদির (ভূ-বিদ্যা)।\n
        শরাফত আলী (গণিত)।\n
        এ আর কে খাদেম (পদার্থবিদ্যা)।\n
        অনুদ্বৈপায়ন ভট্টাচার্য (ফলিত পদার্থবিদ্যা)।\n
        এম এ সাদেক (শিক্ষা)।\n
        এম সাদত আলী (শিক্ষা)।\n
        সন্তোষচন্দ্র ভট্টাচার্য (ইতিহাস)।\n
        গিয়াসউদ্দিন আহমদ (ইতিহাস)।\n
        রাশীদুল হাসান (ইংরেজি)।\n
        এম মর্তুজা (চিকিৎসক)।\n

        রাজশাহী বিশ্ববিদ্যালয়ের শিক্ষকঃ\n
        ডঃ হবিবুর রহমান (গণিত বিভাগ)।\n
        ডঃ শ্রী সুখারঞ্জন সমাদ্দার (সংস্কৃত)।\n
        মীর আবদুল কাইউম (মনোবিজ্ঞান)।\n

        চিকিৎসকঃ\n
        অধ্যাপক ডাঃ মোহাম্মদ ফজলে রাব্বি (হৃদরোগ বিশেষজ্ঞ)।\n
        অধ্যাপক ডাঃ আলিম চৌধুরী (চক্ষু বিশেষজ্ঞ)।\n
        অধ্যাপক ডাঃ শামসুদ্দীন আহমেদ।\n
        অধ্যাপক ডাঃ আব্দুল আলিম চৌধুরী\n
        ডাঃ হুমায়ুন কবীর।\n
        ডাঃ আজহারুল হক।\n
        ডাঃ সোলায়মান খান।\n
        ডাঃ আয়েশা বদেরা চৌধুরী।\n
        ডাঃ কসির উদ্দিন তালুকদার।\n
        ডাঃ মনসুর আলী।\n
        ডাঃ মোহাম্মদ মোর্তজা।\n
        ডাঃ মফিজউদ্দীন খান।\n
        ডাঃ জাহাঙ্গীর।\n
        ডাঃ নুরুল ইমাম।\n
        ডাঃ এস কে লালা।\n
        ডাঃ হেমচন্দ্র বসাক।\n
        ডাঃ ওবায়দুল হক।\n
        ডাঃ আসাদুল হক।\n
        ডাঃ মোসাব্বের আহমেদ।\n
        ডাঃ আজহারুল হক (সহকারী সার্জন)\n
        ডাঃ মোহাম্মদ শফী (দন্ত চিকিৎসক)\n

        অন্যান্যঃ\n
        শহীদুল্লাহ কায়সার (সাংবাদিক)।\n
        নিজামুদ্দীন আহমেদ (সাংবাদিক)।\n
        সেলিনা পারভীন (সাংবাদিক)\n
        সিরাজুদ্দীন হোসেন (সাংবাদিক)।\n
        আ ন ম গোলাম মুস্তফা (সাংবাদিক)।\n
        আলতাফ মাহমুদ (গীতিকার ও সুরকার)।\n
        ধীরেন্দ্রনাথ দত্ত (রাজনীতিবিদ)।\n
        রণদাপ্রসাদ সাহা (সমাজসেবক এবং দানবীর)।\n
        যোগেশ চন্দ্র ঘোষ (শিক্ষাবিদ, আয়ূর্বেদিক চিকিৎসক)।\n
        জহির রায়হান (লেখক, চলচ্চিত্রকার)।\n
        মেহেরুন্নেসা (কবি)।\n
        ডঃ আবুল কালাম আজাদ (শিক্ষাবিদ, গণিতজ্ঞ)।\n
        নজমুল হক সরকার (আইনজীবী)।\n
        নূতন চন্দ্র সিংহ (সমাজসেবক, আয়ূর্বেদিক চিকিৎসক)।\n



    </string>

</resources>
