<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#E98758"
    android:orientation="vertical"
    tools:context=".SecondActivity">
    <Button
        android:id="@+id/buttonId1"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/Intellectual_killing"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId2"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/The_reason"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId3"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/Killing_plan"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId4"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/Murder_details"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId5"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/Individuals_involved"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId6"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/Murder_statistics"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/buttonId7"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:background="#7BC2DB"
        android:text="@string/The_list_of_killed_intellectuals"
        android:layout_margin="5dp"
        />


</LinearLayout>